--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "An API maked by using TS, Express and Node",
   "main": "api/index.js",
   "scripts": {
     "build": "tsc --project ./",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
